@@ -1,5 +1,6 @@
 +++ version 1.3
 * gui: #2869 fixed: uuids visible in info panel after adding new buddy (Vogel)
+* bsd: #2894 fixed: fix build on FreeBSD (Pekala)
 
 +++ version 1.2
 * gui: #2881 fixed: after some imported configuration no contacts are displayed at all (Vogel)
